# v3

./: .EXECUTION_SUMMARY.md  .README_TESTS.md  .TASK_COMPLETION.md  .VERIFICATION_SUMMARY.md  .completion_assessment.md  .conversation_summary.md  .current.diff  .final_summary.md  .gitignore  2  AGENTS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  METHODOLOGY.md  PLAN.md  PROMPT-OVERRIDE.md  QUICKSTART_PYTHON_RUNTIME.md  README.md  READY_TO_TEST.md  RETRY_FEATURE_SUMMARY.md  SNIPPETS_FEATURE_COMPLETE.md  SNIPPETS_IMPLEMENTATION.md  SNIPPETS_QUICK_START.md  aicoder-config.sh  command_verification_plan.json  install-plugins.sh  install-skills.sh  install-snippets.sh  investigation_findings.md  main.py  port-progress.json  pyproject.toml  pytest.ini  qwen-cache.md  run-tests.sh  safety-testing-progress.json  session-v3-refactor-summary.md  session.json  test_coverage_analysis.md  test_edit_file.py  (+5 more)
.aicoder/: current-spec.md  history
aicoder/: __init__.py
docs/: COUNCIL_IMPLEMENTATION_PLAN.md  COUNCIL_README.md  COUNCIL_VS_RALPH_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  PYTHON_RUNTIME.md  RALPH_README.md  REASONING_CAPTURE.md  REASONING_FIELD_ENHANCEMENT.md  SOCKET_API.md  SOCKET_API_SIMPLE_USAGE.md  TEST_ANALYSIS_SUMMARY.md  TEST_REFACTOR_PLAN.md  socket-api-design.md
examples/: TMUX_QUICKREF.md  TMUX_SETUP.md  TMUX_SUMMARY.md  agency-agents  ai_usage.py  aicoder-bashrc  aicoder-start  custom_headers_example.sh  install-rtk-ai.sh  socket_example.sh  socket_quickstart.sh  stats_listener.sh  stats_migrate.sh  tmux-ai-status.sh  tmux-helper.sh  tmux-integration.sh  tmux-status.sh  (+1 more)
(+411 files in other folders)
